# tiny-texas

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-build-push.yml
app/: __init__.py  config.py  main.py
app/auth/: dependencies.py  routes.py  security.py
app/bots/: __init__.py  evaluation.py  monte_carlo.py  strategies.py
app/db/: __init__.py  models.py  session.py
app/game/: __init__.py  cards.py  evaluator.py  models.py  runtime.py  service.py
app/realtime/: __init__.py  manager.py  routes.py
app/rooms/: __init__.py  manager.py  routes.py
app/static/css/: site.css
app/static/js/: room.js
app/templates/: base.html  index.html
app/templates/auth/: login.html  register.html
app/templates/rooms/: detail.html  lobby.html
app/web/: __init__.py  routes.py  templates.py
migrations/: env.py
tests/: test_bots.py  test_evaluator.py  test_http_flow.py  test_runtime.py  test_service.py
